# github-notify-to-tg

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  dprint.json  rust-toolchain.toml  taskfile.yaml
.github/: mergify.yml  renovate.json
.github/workflows/: checks.yml  docker-build-check.yml  release.yml
src/: db.rs  main.rs
