[package]
name = "github-notify-to-tg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
octocrab = "0.49.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "net", "time", "macros", "signal"] }
