[package]
name = "github-notify-to-tg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
chrono-tz = "0.10.4"
octocrab = "0.49.5"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
rustls = { version = "0.23.36", features = ["aws_lc_rs"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "net", "time", "macros", "signal"] }
